elk-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk-stack
  labels:
    name: elk-stack
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
